--- a/media/css/login.css
+++ b/media/css/login.css
@@ -14,16 +14,11 @@ header img {
 }
 
 nav {
-    background-color: rgba(27, 36, 95, 1);
+    background-color: rgba(26, 42, 93, 1);
 }
 
 body {
-    height: 100%;
     background: linear-gradient(0deg, rgba(16, 37, 78, 0.7), rgba(16, 37, 78, 0.7)), url('/PPDB/media/image/monumen-sma-pradita-dirgantara-2.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
- 
 }
 
 
@@ -40,7 +35,6 @@ body {
 .wrapper {
     position: relative;
     min-height: 100%;
-    padding-bottom: 100px;
 }
 
 .card {
@@ -97,4 +91,10 @@ footer {
     */
     margin-top: 5rem;
     margin-bottom: 2rem;
+}
+
+@media (min-width: 992px){
+    body {
+        background-size: cover;
+    }
 }
